--- a/src/app/components/home-question-list-item/home-question-list-item.component.html
+++ b/src/app/components/home-question-list-item/home-question-list-item.component.html
@@ -25,10 +25,10 @@
       </a>
 
 
-   <!--   <span class="best-answered" *ngIf="question.id === 141">
+      <span class="best-answered" *ngIf="question.id === 141">
         <mat-icon class="check-icon" *ngIf="question.id === 141">done</mat-icon>
         CEVAPLANDI
-      </span>-->
+      </span>
 
     </div>
 
