--- a/src/app/main/components/nav-drawer/nav-drawer.component.scss
+++ b/src/app/main/components/nav-drawer/nav-drawer.component.scss
@@ -82,10 +82,10 @@ mat-toolbar mat-icon {
   }
 
   &:hover::-webkit-scrollbar-thumb {
-    background-color: #c1c1c1;
+    background-color: #625B71;
 
     &:hover {
-      background-color: #787878;
+      background-color: #7A7289;
     }
   }
 }
