--- a/src/styles/themes/deep-purple-light.scss
+++ b/src/styles/themes/deep-purple-light.scss
@@ -1,7 +1,8 @@
 $dark-primary-text: rgba(black, 0.87);
 $light-primary-text: white;
 
-$deep-purple-palette: (
+$deep-purple-palette:   (
+  PURPLE40: #6750A4,
   50: #F2E7FE,
   100: #DBB2FF,
   200: #BB86FC,
