--- a/src/app/components/popups/user-profile-popup/user-profile-popup.component.scss
+++ b/src/app/components/popups/user-profile-popup/user-profile-popup.component.scss
@@ -4,11 +4,13 @@
 }
 
 .popup-page {
-  background-color: #FFF;
   max-height: calc(100vh - 64px);
   display: flex;
   flex-direction: column;
   border-radius: 28px;
+  background: #F7F2FA;
+  /* M3/Elevation Light/1 */
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.30);
 
   header {
     padding: 16px;
