--- a/src/app/question/components/answer-form/answer-form.component.html
+++ b/src/app/question/components/answer-form/answer-form.component.html
@@ -69,7 +69,7 @@
     </div>
   </inek-editor-buttons>
 
-  <mat-form-field appearance='outline' hideRequiredMarker>
+  <mat-form-field  hideRequiredMarker>
     <textarea #textAreaElement aria-label='Answer text' matInput cdkTextareaAutosize cdkAutosizeMinRows='8'
               placeholder='Açıklayıcı bir şekilde cevap yazın' [formControl]='answerControl'></textarea>
     <mat-error *ngIf="answerControl.hasError('required')">Bir açıklama girin</mat-error>
