--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -93,10 +93,10 @@
               <a routerLink='/user/{{question.user.id}}'>
                 <div itemprop='name' id='author-name'>{{question.user.displayName}}</div>
               </a>
-              <!--     <div class="verified-icon-container">
-                     <app-icon name="check"></app-icon>
-                    &lt;!&ndash; <mat-icon>gavel</mat-icon>&ndash;&gt;
-                   </div>-->
+                   <div class="verified-icon-container" *ngIf="question.user.isVerified">
+                     <app-icon name="check" matTooltip="Doğrulandı"></app-icon>
+                    <!-- <mat-icon>gavel</mat-icon>-->
+                   </div>
             </div>
             <div class='author-badge'>Seviye 1</div>
           </div>
@@ -113,7 +113,6 @@
 </div>
 
 <app-answer-form />
-
 
 <ng-template #loginPopup>
   <mat-card appearance='outlined' class='mat-elevation-z4'>
