--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,7 +11,10 @@
       </div>
 
       <div class='header__details'>
-        <h4 class='headline-4'>{{user.displayName}}</h4>
+        <h4 class='headline-4'>
+          {{user.displayName}}
+          <mat-icon *ngIf="user.isVerified">check</mat-icon>
+        </h4>
         <div class='header__meta'>
 
           <!-- Signup date -->
