--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,22 +93,27 @@ svg {
   }
 }
 
-[standardized-themed-scrollbar]::-webkit-scrollbar {
-  width: 16px;
-  background-color: var(--scrollbar-bg-color);
-  border-left: 1px solid var(--border-color);
+html {
+
+  scrollbar-color: #7A7289 #FFFBFA;
 }
 
-[standardized-themed-scrollbar]::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar {
+  width: 16px;
+  background-color: transparent;
+  // border-left: 1px solid var(--border-color);
+}
+
+body::-webkit-scrollbar-thumb {
   min-height: 56px;
   border-radius: 8px;
   border: 4px solid transparent;
   background-clip: content-box;
-  background-color: var(--scrollbar-thumb-background);
+  background-color: #625B71;
 }
 
-[standardized-themed-scrollbar]::-webkit-scrollbar-thumb:hover {
-  background-color: var(--thumb-bg-hover);
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #7A7289;
 }
 
 /**
