--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -134,3 +134,5 @@ h1, h2, h3, h4, h5, h6 {
 @import "m3.list.sys";
 @import "m3.tabs.sys";
 @import "m3.menu.sys";
+@import "m3.progress-indicators.sys";
+@import "m3.dialog.sys";
