--- a/src/app/components/popups/notification-list-popup/notification-list-popup.component.html
+++ b/src/app/components/popups/notification-list-popup/notification-list-popup.component.html
@@ -25,7 +25,7 @@
     <ng-template #noResult>
       <div class="promo-message">
         <p class="subtitle-1">Bildirimleriniz burada gösterilir</p>
-        <p class="body-2">Favori kanallarınıza abone olarak bu kanalların en yeni videoları hakkında bildirim alın.</p>
+        <p>Favori kanallarınıza abone olarak bu kanalların en yeni videoları hakkında bildirim alın.</p>
       </div>
     </ng-template>
 
