--- a/src/app/create-question/create-question.component.html
+++ b/src/app/create-question/create-question.component.html
@@ -1,13 +1,13 @@
 <div class='my-content'>
 
   <header>
-    <h2 class='headline-5'>Herkese açık soru oluştur</h2>
+    <h1 class='m3-headline-large'>Herkese açık soru oluştur</h1>
   </header>
 
   <form autocomplete='off' spellcheck='false' [formGroup]='questionForm' (submit)='submit()'>
     <div class='form-body'>
 
-      <mat-form-field hideRequiredMarker appearance="outline">
+      <mat-form-field hideRequiredMarker>
         <mat-label>Başlık</mat-label>
         <input aria-label='Başlık' matInput formControlName='title'>
         <mat-error *ngIf="questionForm.get('title')?.hasError('required')">Bir başlık girin</mat-error>
@@ -40,7 +40,7 @@
             </button>
           </div>-->
 
-        <mat-form-field appearance='outline' hideRequiredMarker>
+        <mat-form-field hideRequiredMarker>
           <mat-label>Açıklama</mat-label>
           <textarea #markedTextarea (ngModelChange)='onSelectChange($event)' (change)='onSelectChange($event)'
                     (selectionchange)='onSelectChange($event)' aria-label='Question text' (blur)='onBlur()'
