--- a/src/app/site-code/copy-code.component.scss
+++ b/src/app/site-code/copy-code.component.scss
@@ -56,12 +56,11 @@ pre {
   line-height: 24px;
   overflow: auto;
   margin: 0;
-  padding: 32px 16px !important;
+  padding: 24px 16px !important;
   scrollbar-width: thin;
-  scrollbar-color: #c1c1c1 transparent;
   word-wrap: normal;
   border-radius: 12px;
-  background: #E6E0E9;
+  border: 1px solid #CAC4D0;
 }
 
 /*
