--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -1,6 +1,5 @@
   <header>
-    <h6 class="headline-6">{{tag.title}}</h6>
-    <p class="body-1 page-description">Our latest news, updates, and stories about {{tag.title}}.</p>
+    <h6 class="m3-display-small">{{tag.title}}</h6>
   </header>
   <mat-divider />
 
