--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class='header__details'>
-        <h4 class='headline-4'>
+        <h4 class='m3-display-small'>
           {{user.displayName}}
           <mat-icon *ngIf="user.isVerified">check</mat-icon>
         </h4>
