--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Archivo, Roboto, "Helvetica Neue", sans-serif;
+  font-family: Archivo, "Helvetica Neue", sans-serif;
 }
 
 * {
