--- a/src/app/home/filter/filter.component.scss
+++ b/src/app/home/filter/filter.component.scss
@@ -1,20 +1,19 @@
-:host {
-  display: block;
-  margin-bottom: 24px;
 
-  .host-container {
+.host-container {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  margin: 16px 0 24px 0;
+
+  .header {
     display: flex;
     align-items: center;
-    padding: 24px 0 0 0;
-
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-    }
+    justify-content: space-between;
+    width: 100%;
   }
 }
+
+
 
 /**
   For mobile
@@ -60,11 +59,11 @@ button[aria-expanded='true'] {
   .header {
     display: flex;
 
-/*    h5 {
-      text-transform: uppercase;
-      font-size: 14px;
-      font-weight: 500;
-    }*/
+    /*    h5 {
+          text-transform: uppercase;
+          font-size: 14px;
+          font-weight: 500;
+        }*/
   }
 
   .host-container {
