--- a/src/app/main/components/top-bar/components/search-form/search-form.component.scss
+++ b/src/app/main/components/top-bar/components/search-form/search-form.component.scss
@@ -9,7 +9,7 @@
   align-items: center;
   width: 720px;
   height: 56px;
-  background: var(--m-3-sys-light-surface-container-high);
+  background: #f1f1f1;
   padding-left: 8px;
   padding-right: 16px;
   border-radius: 28px;
@@ -100,27 +100,15 @@ mat-icon {
   border-radius: 10px;
 }
 
-.user-option {
-  height: 56px;
-  display: flex;
+.suggestions {
 
-  ::ng-deep .mdc-list-item__primary-text {
-    display: flex;
-    align-items: center;
-  }
+  .user-picture {
 
-  .option-user-img {
-    display: flex;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 16px;
   }
 
   .user-display-name {
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
   }
 }
 
@@ -138,4 +126,13 @@ mat-icon {
   background-color: transparent;
   font-weight: 500;
   color: inherit;
+}
+
+#suggestion-list {
+  border-radius: 24px !important;
+  border-top: 1px solid #938F99;
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+  box-shadow: none !important;
+  background-color: var(--m-3-sys-light-surface-container-high);
 }
