--- a/src/app/question/components/question-text/question-text.component.scss
+++ b/src/app/question/components/question-text/question-text.component.scss
@@ -5,8 +5,8 @@
 :host ::ng-deep p {
   font-family: Roboto, sans-serif;
   font-size: 16px;
-  line-height: 28px;
-  // letter-spacing: .5px;
+  line-height: 24px;
+  letter-spacing: .5px;
 }
 
 .content {
