--- a/src/app/components/popups/notification-list-popup/notification-list-popup.component.html
+++ b/src/app/components/popups/notification-list-popup/notification-list-popup.component.html
@@ -1,4 +1,4 @@
-<div class="popup-page mat-elevation-z3">
+<div class="popup-page">
   <header>
     <div class="subtitle-1">Bildirimler</div>
   </header>
