--- a/src/app/home/filter/filter.component.html
+++ b/src/app/home/filter/filter.component.html
@@ -12,9 +12,8 @@
     <mat-chip-option selected>Tümü</mat-chip-option>
     <mat-chip-option>Önerilenler</mat-chip-option>
     <mat-chip-option>Son eklenenler</mat-chip-option>
-    <mat-chip-option>Güncel</mat-chip-option>
-    <mat-chip-option>Cevapsızlar</mat-chip-option>
-    <mat-chip-option>Mükâfatlı</mat-chip-option>
+    <mat-chip-option>Güncel sorular</mat-chip-option>
+    <mat-chip-option>Cevapsız sorular</mat-chip-option>
   </mat-chip-listbox>
 
   <button mat-button>
