--- a/src/styles/m3.progress-indicators.sys.scss
+++ b/src/styles/m3.progress-indicators.sys.scss
@@ -1,3 +1,4 @@
+/*
 .mat-mdc-progress-bar {
   --mdc-linear-progress-active-indicator-color: #6750A4 !important;
   --mdc-linear-progress-track-color: #E6E0E9 !important;
@@ -6,3 +7,4 @@
 .mat-mdc-progress-spinner {
   --mdc-circular-progress-active-indicator-color: #6750A4 !important;
 }
+*/
