--- a/src/app/components/popups/notification-list-popup/notification-list-popup.component.scss
+++ b/src/app/components/popups/notification-list-popup/notification-list-popup.component.scss
@@ -14,6 +14,7 @@
   border-radius: 12px;
   color: var(--text-color);
   overflow: hidden;
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 header {
