--- a/src/app/components/popups/user-profile-popup/user-profile-popup.component.scss
+++ b/src/app/components/popups/user-profile-popup/user-profile-popup.component.scss
@@ -1,30 +1,32 @@
 :host {
   display: block;
-  width: 360px;
+  width: 400px;
 }
 
 .popup-page {
   max-height: calc(100vh - 64px);
   display: flex;
   flex-direction: column;
-  border-radius: 28px;
-  background: #F7F2FA;
+  border-radius: 12px;
+  background: #FFF;
   /* M3/Elevation Light/1 */
   box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.30);
 
   header {
     padding: 16px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 16px;
     margin: 8px;
-    border-radius: 28px;
+    border-radius: 12px;
   }
 
   .user-profile-avatar {
     display: flex;
-    width: 64px;
-    height: 64px;
+    width: 96px;
+    height: 96px;
     border-radius: 50%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
@@ -41,9 +43,10 @@
 }
 
 .title {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 400;
+  font-stretch: semi-expanded;
 }
 
 .subtitle {
