--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,11 +109,11 @@ body::-webkit-scrollbar-thumb {
   border-radius: 8px;
   border: 4px solid transparent;
   background-clip: content-box;
-  background-color: #625B71;
+  background-color: #747474;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-  background-color: #7A7289;
+  background-color: #8F8F8F;
 }
 
 /**
